Don't let columns with no cells originating in them expand in the pass for expanding zero-width columns.  b=425972  r=dholbert  sr=roc  a=blocking1.9+